# projet-devops

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
src/order_management/: models.py  services.py
src/order_management.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/projet_devops/: order.py  workflow.py
src/projet_devops.egg-info/: PKG-INFO  SOURCES.txt
tests/: test_calculate_total.py  test_order.py  test_status_transition.py  test_workflow.py
