[build-system]
requires = ["setuptools>=65.0"]
build-backend = "setuptools.build_meta"

[project]
name = "order-management"
version = "0.1.0"
description = "Simple order management domain logic"
authors = [{ name = "Your Name" }]
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
